# loom-qml-component-library

./: .gitignore  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md
examples/gallery/: BadgePage.qml  ButtonPage.qml  CMakeLists.txt  CardPage.qml  CodeBlock.qml  FeedbackPage.qml  I18n.qml  InputsPage.qml  Main.qml  OverviewPage.qml  Swatch.qml  ThemePage.qml  TokenSection.qml  main.cpp
src/Loom/: Alert.qml  Badge.qml  Button.qml  CMakeLists.txt  Card.qml  CheckBox.qml  ComboBox.qml  Elevation.qml  FocusRing.qml  ProgressBar.qml  RadioButton.qml  RadioGroup.qml  Slider.qml  Switch.qml  TextField.qml  Theme.qml  Toast.qml  ToastArea.qml  Tooltip.qml
